# akimous

./: .akimous.json  .babelrc  .eslintignore  .eslintrc.json  .gitignore  .jsbeautifyrc  .pylintrc  .stylelintrc  About Documentation Rendering.md  CHANGELOG.md  CODE_OF_CONDUCT.md  DevNotes.md  LICENSE  Makefile  README.md  firebase.json  maidfile.md  package.json  pyproject.toml  rollup.config.js
.akimous/: config.json  dictionary.json
.circleci/: config.yml
akimous/: .style.yapf  __main__.py  completion_utilities.py  config.py  doc_generator.py  editor.py  file_finder.py  file_tree.py  interactive_shell.py  jedi_preloader.py  master.py  online_feature_extractor.py  open_folder.py  project.py  pyflakes_reporter.py  setup.cfg  spell_checker.py  static_server.py  terminal.py  utils.py  websocket.py  websocket_backup.py  word_completer.py
akimous/demo/: demo.py  jupyter.py  rte.py  test.py
akimous/modeling/: completion_engine.py  download.py  evaluator.py  extract_features.py  generate_token_statistics.py  learner.py  offline_feature_extractor.py  repo_downloader.py  run_repo_feature_extraction.py  sample.py  select_features.py  split.py  token_map.py  train.py  utility.py  vis.py  visualize.py
akimous/modeling/feature/: completion_features.py  context_features.py  feature_definition.py
akimous/resources/: bigram.xz  default_config.json  default_project_config.json  default_project_state.json  macro.js  token.xz  trigram.xz  unigram.xz  v10.model  v11.xgb  v12.xgb
akimous/resources/doc_template/: conf.py
akimous/scripts/: collect_builtin_documentation.py  sphinx_builder.py
akimous/tests/: test_features.py
chakuro-agent/: .akimous.json  .gitignore  .pylintrc  Pipfile  config_manager.py  deprecated.py  doc_generator.py  editor.py  file_tree.py  jedi_accelerator.py  main.py  master.py  online_feature_extractor.py  pyflakes_reporter.py  pyproject.toml  spell_checker.py  static_server.py  testObserver.py  utils.py  websocket.py  word_completer.py  ws.py
chakuro-agent/demo/: demo.py
chakuro-agent/modeling/: download.py  evaluator.py  extract_features.py  feature_definition.py  generate_token_statistics.py  learner.py  offline_feature_extractor.py  repo_downloader.py  rule_based_predictor.py  run_repo_feature_extraction.py  select_features.py  split.py  test.py  token_map.py  train.py  utility.py  vis.py  visualize.py
chakuro-agent/modeling/feature/: __init__.py  completion_features.py  context_features.py  feature_definition.py
chakuro-agent/resources/: __init__.py  bigram.xz  default_config.json  repo.json  trigram.xz  v2.model  v3.model  v4.model  v5.model  v7.model  v8.model
chakuro-agent/resources/doc_template/: conf.py
chakuro-agent/scripts/: collect_builtin_documentation.py  sphinx_builder.py
chakuro-agent/tests/: docs.py  test_features.py  test_jedi.py
chakuro-agent/tests/fixture/: test1.py
cypress/integration/: Docs.spec.js
docker/: update.py
docker/dev-environment/: .p10k.zsh  .zsh_plugins.txt  .zshrc  Dockerfile
docker/slim/: Dockerfile
images/: logo.gvdesign
logo/: logo.gvdesign
resources/: doc-style-dark.css  doc-style.css  manifest.json  serviceWorker.js  style.css  theme.css
src/: App.html  Console.html  EmptyComponent.html  PanelLeft.html  PanelMiddle.html  PanelRight.html  Toolbar.html  index.html  main.js  theme.css
src/LayeredKeyboardControl/: EventDispatcherFactory.js  Hotkeys.js  KeyboardControlHint.html  Keymap.js  LayeredKeyboardControl.js
src/PanelLeft/: FileTree.html  PanelLeft.html
src/bars/: CursorPosition.html  NotificationBar.html  Tab.html  TabNumber.html  ToolBarButton.html  Toolbar.html
src/editor/: CMCommands.js  CMEventDispatcher.js  CodeEditor.html  EditorFunctions.js  RealtimeFormatter.js  RegexDefinitions.js  match-highlighter.js
src/editor/completion/: Completion.html  CompletionEventDispatcher.js  CompletionProvider.js  CompletionRow.html  PassivePredictor.js  Predictor.js  RuleBasedPredictor.js  Sorter.js
src/lib/: ConfigManager.js  ContextMenu.html  ContextMenuDivider.html  ContextMenuEventDispatcher.js  ContextMenuRow.html  FileTypeToIcon.js  FileTypes.js  Globals.js  Keymap.js  Socket.js  UIUtils.js  Utils.js  WSClient.js  doc-style-dark.css  python.js
src/panels/: Console.html  Docs.html  FileTree.html  FileTreeNew.html  FileTreeNode.html  Find.html  Linter.html  LinterOptions.html  Macro.html  MenuBar.html  MenuItem.html  NotificationBar.html  NotificationHistory.html  Outline.html  OutlineNode.html  Popup.html  Prompt.html  Tab.html  TabBar.html  TabNumber.html  TabNumberHint.html  ToolBarButton.html  Toolbar.html
src/popups/: ContextMenu.html  ContextMenuRow.html  LinterOptions.html  NotificationHistory.html  PanelPopup.html  Prompt.html
tests/: test_completion_engine.py  test_features.py  test_jedi.py  test_tokenmap.py
tests/fixture/: ml.py
ui/: .eslintignore  .eslintrc.js  .eslintrc.json  .jsbeautifyrc  .stylelintrc.js  codecept.conf.js  jest-puppeteer.config.js  jest.config.js  package.json  rollup.config.js  svelte-upgrade.txt
ui/resources/: macro.js  manifest.json  offline.html  serviceWorker.js  style.css  theme.css
ui/src/: App.html  EmptyComponent.html  PanelLeft.html  PanelMiddle.html  PanelRight.html  index.html  main.js
ui/src/LayeredKeyboardControl/: EventDispatcherFactory.js  Hotkeys.js  KeyboardControlHint.html  Keymap.js  LayeredKeyboardControl.js
ui/src/bars/: CommandPalette.html  CommandSelector.html  CursorPosition.html  GitStatus.html  MenuBar.html  MenuItem.html  NotificationBar.html  PathIndicator.html  Tab.html  TabBar.html  TabNumber.html  ToolBarButton.html  Toolbar.html
ui/src/editor/: CMCommands.js  CMEventDispatcher.js  CodeEditor.html  Context.js  EditorFunctions.js  RealtimeFormatter.js  (+3 more)
ui/test/: .eslintrc.js  editor_Completion_test.js  editor_RealtimeFormatter_test.js  editor_helper.js  fileTree_test.js  main.test.js  menu_File_test.js  panel_FileTree_test.js  prepare_test.js  steps_file.js  unit_Sorter.js  unit_Utils.js
(+50 files in other folders)
