[tool.poetry]
name = "chakuro-agent"
version = "0.1.0"
description = "Chakuro backend"
authors = ["Yu-Ann Chen <red8012@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "^1.15"
gitpython = "^2.1"
jedi = "^0.12.1"
sphinx = "^1.7"
watchdog = "^0.8.3"
logzero = "^1.5"
websockets = "^6.0"
xgboost = "^0.72.1"
numpydoc = "^0.8.0"
fuzzywuzzy = "^0.17.0"
python-levenshtein = "^0.12.0"
msgpack = "^0.5.6"
wordsegment = "^1.3"
boltons = "^18.0"
pyroma = "^2.4"
pylint = "^2.1"
pyflakes = "^2.0"
yapf = "^0.25.0"
pathspec = "^0.5.9"

[tool.poetry.dev-dependencies]
pandas = "^0.23.4"
memory_profiler = "^0.54.0"
pybloomfiltermmap = "^0.3.15"
scikit-learn = "^0.19.2"
scipy = "^1.1"
pytest = "^3.8"
colorama = "^0.3.9"
tqdm = "^4.26"
